# wgpu_start

./: Cargo.toml
beginner/: Cargo.toml
beginner-02/: Cargo.toml
beginner-02/src/: main.rs  shader.wgsl
beginner-03/: Cargo.toml
beginner-03/src/: camera.rs  control.rs  main.rs  shader.wgsl  texture.rs
beginner/src/: challenge.wgsl  main.rs
utils/: Cargo.toml
utils/src/: framework.rs  lib.rs
wasm_output/: beginner.html
wasm_output/pkg/: beginner-02.js  beginner.js  beginner_bg.wasm
