[package]
name = "beginner-03"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu.workspace = true
env_logger.workspace = true
log.workspace = true
parking_lot.workspace = true
winit.workspace = true
utils.workspace = true
bytemuck.workspace = true
pollster.workspace = true
image.workspace = true
