[package]
name = "beginner"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu.workspace = true
env_logger.workspace = true
log.workspace = true
parking_lot.workspace = true
winit.workspace = true
utils.workspace = true
cfg-if.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster.workspace = true
wgpu = { workspace = true, features = ["webgl"] }
