[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if.workspace = true
env_logger.workspace = true
log.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Document", "Window", "Element"] }

[lib]
crate-type = ["cdylib", "rlib"]
